--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Switch 2 Video Player</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="demo.mp4" as="video">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Switch 2 Video Player 🎮</h1>
-  <video id="player" controls autoplay>
-    <source src="videos/demo.mp4" type="video/mp4">
-    Sorry, your Switch browser can’t play this video.
+
+  <!-- Use direct src to the file in current directory -->
+  <video id="player" controls autoplay playsinline preload="metadata">
+    <source src="demo.mp4" type="video/mp4">
+    Sorry, your browser can't play this video.
   </video>
+
   <div class="menu">
-    <button onclick="loadVideo('demo.mp4')">Game 1</button>
-    <button onclick="loadVideo('demo2.mp4')">Game 2</button>
-    <button onclick="refreshPage()">🔄 Refresh</button>
+    <button onclick="reloadVideo()">▶ Reload video</button>
+    <button onclick="refreshPage()">🔄 Refresh page</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
